--- a/homework 1.Rmd
+++ b/homework 1.Rmd
@@ -83,19 +83,20 @@ Reproduce Table 3.3, at least the first four columns that is LS, Best Subset, Ri
 **LS column**
 ```{r}
 # CVXR: An R Package for Disciplined Convex Optimization
-# check if the package works
 p <- 9
 betaHat <- Variable(p)
 objective <- Minimize(sum((Ytrain  - Xtrainone %*% betaHat)^2))
 problem <- Problem(objective)
 result <- solve(problem)
 bo <- round(result$getValue(betaHat), 3)
+#Lastly we compare the found bo model with the b model from exercise 1 to see if the values match up
 cbind((round(1000*bo)/1000),(round(1000*b)/1000))
 ```
 
 
 **Best subset column**
 ```{r}
+#Here we use the leaps package to find the best subset using an exhaustive search
 df <- as.data.frame(cbind(Xtrain,Ytrain))
 best.subset <- regsubsets(Ytrain~., df)
 best.subset.summary <- summary(best.subset)
@@ -124,9 +125,6 @@ plot(best.subset.summary$cp, xlab="Number of Variables", ylab="CP", type="l")
 points(best.subset.by.cp, best.subset.summary$cp[best.subset.by.cp], col="red", cex =2, pch =20)
 ```
 Next we use the same method employed during the LS model to find our coefficients only this time we use just the two explanatory variables the best subset model gave us.
-```{r}
-b2 <-lm(Ytrain~Xtrain[,1]+Xtrain[,2], data=df)
-```
 
 ```{r}
 p <- 3
@@ -137,11 +135,22 @@ problem <- Problem(objective)
 result <- solve(problem)
 bb <- result$getValue(betaHat)
 
+#Lastly we compare the found bb model with the lm1 model which used a linear regression on only the two explanatory variables found
 lm1 <- lm(Ytrain ~Xtrain[,1:2])
 comp <-cbind(bb,lm1$coefficients)
 round(1000*comp)/1000
 bb <- round(rbind(bb, 0, 0, 0, 0, 0, 0),3)
 ```
+
+**Ridge column**
+```{r}
+#First off we centre the Xtrain data to account for the centration
+Xtraincen <- Xtrain-mean(Xtrain)
+br <- solve(t(Xtraincen) %*% Xtraincen + diag(x = 24, ncol(Xtraincen)), t(Xtraincen) %*% (Ytrain - mean(Ytrain)))
+br <- rbind(mean(Ytrain),br)
+br <- round(br,3)
+```
+
 
 **The Lasso**
 ```{r}
@@ -160,14 +169,6 @@ bl <- result$getValue(betaHat)*sqrt(var(Ytrain)) / d
 bl <- round(rbind(mean(Ypred-(Xtrain %*% bl)),bl),3)
 ```
 
-
-**Ridge column**
-```{r}
-Xtraincen <- Xtrain-mean(Xtrain)
-br <- solve(t(Xtraincen) %*% Xtraincen + diag(x = 24, ncol(Xtraincen)), t(Xtraincen) %*% (Ytrain - mean(Ytrain)))
-br <- rbind(mean(Ytrain),br)
-br <- round(br,3)
-```
 
 
 **PCR column**
@@ -229,286 +230,4 @@ table
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-# error calculation
-
-
-
-```{r}
-error(bo)
-```
-
-
-
-
-
-
-
-```{r}
-br <- solve(t(Xtrain) %*% Xtrain + diag(x = 24, ncol(Xtrain)), t(Xtrain) %*% (Ytrain - mean(Ytrain)))
-br <- rbind(mean(Ytrain), br)
-round(br,3)
-
-Ridge <- round(1000*ridge(24))/1000
-Ridge
-```
-
-```{r}
-# The Ridge
-ridge <- function(lambda){
-  br <- solve(t(Xtrain) %*% Xtrain + diag(x = lambda, ncol(Xtrain)), t(Xtrain) %*% (Ytrain - mean(Ytrain)))
-  br <- rbind(mean(Ytrain), br)
-  br
-}
-
-Ridge <- round(1000*ridge(24))/1000
-Ridge
-```
-
-
-```{r}
-p <- 9
-lambda <- 24
-ys = scale(Ytrain)
-betaHat <- Variable(p-1)
-objective <- Minimize(sum((ys - Xtrainscale %*% betaHat)^2) + lambda*sum((betaHat)^2))
-problem <- Problem(objective)
-result <- solve(problem)
-
-d <- sqrt(diag(var(Xtrain)))
-br <- result$getValue(betaHat)*sqrt(var(Ytrain)) / d
-round(1000*br)/1000
-```
-
-
-
-```{r}
-# The Ridge
-#t <-  .7015
-t <- 0.253
-ys = scale(Ytrain)
-betaHat <- Variable(p-1)
-objective <- Minimize(sum((ys - Xtrainscale %*% betaHat)^2))
-constraint <- list(sum((betaHat)^2) <=  t)
-problem <- Problem(objective, constraint)
-result <- solve(problem)
-d <- sqrt(diag(var(Xtrain)))
-bl <- result$getValue(betaHat)*sqrt(var(Ytrain)) / d
-round(1000*bl)/1000
-```
-```{r}
-Xa = X(ind,:)
-Xc = Xa - ones(na,1)*mean(Xa)
-intercept = mean(Ypred)
-yc = Ypred-mean(Ypred)
-
-Id = eye(8)
-lam = 24
-bl = (Xc'*Xc+lam*Id)\(Xc'*yc)
-
-df = trace(Xc*(inv(Xc'*Xc+lam*Id))*Xc')
-
-br = [intercept ; bl]
-```
-
-```{r}
-#intercept of the ridge column
-mean(Ypred)
-```
-
-**Lasso column**
-```{r}
-# The Lasso
-t <-  .7015
-ys = scale(Ytrain)
-betaHat <- Variable(p-1)
-objective <- Minimize(sum((ys - Xtrainscale %*% betaHat)^2))
-constraint <- list(sum(abs(betaHat)) <=  t)
-problem <- Problem(objective, constraint)
-result <- solve(problem)
-d <- sqrt(diag(var(Xtrain)))
-bl <- result$getValue(betaHat)*sqrt(var(Ytrain)) / d
-round(1000*bl)/1000
-```
-Where the intercept is defined as:
-```{r}
-#intercept of the lasso
-mean(Ypred-(Xtrain %*%bl))
-```
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-```{r}
-b1 <-lm(formula = lpsa ~. , data = data)
-df <- as.data.frame(cbind(Xtrain,Ytrain))
-b2 <-lm(Ytrain~Xtrain[,1]+Xtrain[,2], data=df)
-#b3 <-lsfit(Ytrain~., data=df)
-```
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-```{r}
-library(leaps)
-best.subset <- regsubsets(Ytrain~., df)
-best.subset.summary <- summary(best.subset)
-best.subset.summary$outmat
-```
-
-```{r}
-best.subset.by.adjr2 <- which.max(best.subset.summary$adjr2)
-#best.subset.by.adjr2
-
-best.subset.by.cp <- which.min(best.subset.summary$cp)
-#best.subset.by.cp
-
-best.subset.by.bic <- which.min(best.subset.summary$bic)
-#best.subset.by.bic
-```
-
-We choose two explanatory variables and hence we stick with the model that uses lcavol and lweight to predict y (lpsa)
-```{r}
-par(mfrow=c(2,2))
-plot(best.subset$rss, xlab="Number of Variables", ylab="RSS", type="l")
-plot(best.subset.summary$adjr2, xlab="Number of Variables", ylab="Adjusted RSq", type="l")
-points(best.subset.by.adjr2, best.subset.summary$adjr2[best.subset.by.adjr2], col="red", cex =2, pch =20)
-plot(best.subset.summary$cp, xlab="Number of Variables", ylab="CP", type="l")
-points(best.subset.by.cp, best.subset.summary$cp[best.subset.by.cp], col="red", cex =2, pch =20)
-plot(best.subset.summary$bic, xlab="Number of Variables", ylab="BIC", type="l")
-points(best.subset.by.bic, best.subset.summary$bic[best.subset.by.bic], col="red", cex =2, pch =20)
-```
-```{r}
-best.subset.by.adjr2 <- which.max(best.subset.summary$adjr2)
-best.subset.by.adjr2
-best.subset.by.cp <- which.min(best.subset.summary$cp)
-best.subset.by.cp
-best.subset.by.bic <- which.min(best.subset.summary$bic)
-best.subset.by.bic
-```
-
-```{r}
-#data <- read.table("prostate.data",
-#                   sep = "")
-
-data[32,2] = 3.8044  # strange science 
-
-X <- scale(data[,1:8])
-Y <- as.matrix(data[,"lpsa"])
-
-Xtrain <- X[data[["train"]], ]
-Ytrain <- Y[data[["train"]],]
-
-Xtest <- X[!data[["train"]], ]
-Ytest <- Y[!data[["train"]], ]
-
-Xtrainscale <- scale(Xtrain)
-C <- cov(as.matrix(Xtrainscale))
-
-Xtrainone <- cbind(array(1, dim = c(nrow(Xtrain),1)),
-                         Xtrain)
-
-b <- solve(t(Xtrainone) %*% Xtrainone,
-           t(Xtrainone) %*% Ytrain)
-
-Ypred <- Xtrainone %*% b
-err <- Ytrain - Ypred
-
-sig2 <- (t(err) %*% err)/ (nrow(Xtrainone) - ncol(X) -1)
-v <- diag(solve(t(Xtrainone) %*% Xtrainone))
-stderr <- sqrt(as.vector(sig2)) * sqrt(v)
-
-Z <- b/stderr
-table32 <- cbind(b,stderr,Z)
-round(100*table32)/100
-
-# CVXR: An R Package for Disciplined Convex Optimization
-# check if the package works
-p <- 9
-betaHat <- Variable(p)
-objective <- Minimize(sum((Ytrain  - Xtrainone %*% betaHat)^2))
-problem <- Problem(objective)
-result <- solve(problem)
-bo <- result$getValue(betaHat)
-round(1000*bo)/1000
-round(1000*b)/1000
-
-# The Lasso
-t <-  .7015
-ys = scale(Ytrain)
-betaHat <- Variable(p-1)
-objective <- Minimize(sum((ys - Xtrainscale %*% betaHat)^2))
-constraint <- list(sum(abs(betaHat)) <=  t)
-problem <- Problem(objective, constraint)
-result <- solve(problem)
-
-d <- sqrt(diag(var(Xtrain)))
-bl <- result$getValue(betaHat)*sqrt(var(Ytrain)) / d
-round(1000*bl)/1000
-
-
-```
-
-
-```{r}
-best.subset.by.adjr2 <- which.max(best.subset.summary$adjr2)
-best.subset.by.adjr2
-best.subset.by.cp <- which.min(best.subset.summary$cp)
-best.subset.by.cp
-best.subset.by.bic <- which.min(best.subset.summary$bic)
-best.subset.by.bic
-par(mfrow=c(2,2))
-plot(best.subset$rss, xlab="Number of Variables", ylab="RSS", type="l")
-plot(best.subset.summary$adjr2, xlab="Number of Variables", ylab="Adjusted RSq", type="l")
-points(best.subset.by.adjr2, best.subset.summary$adjr2[best.subset.by.adjr2], col="red", cex =2, pch =20)
-plot(best.subset.summary$cp, xlab="Number of Variables", ylab="CP", type="l")
-points(best.subset.by.cp, best.subset.summary$cp[best.subset.by.cp], col="red", cex =2, pch =20)
-plot(best.subset.summary$bic, xlab="Number of Variables", ylab="BIC", type="l")
-points(best.subset.by.bic, best.subset.summary$bic[best.subset.by.bic], col="red", cex =2, pch =20)
-
-```
 
